...
            key: ValueKey('bottom_nav_home'),
            icon: Icon(AppIcons.home),
            activeIcon: Icon(AppIcons.home),
            label: 'Home',
          ),
          AdaptiveNavigationItem(
            key: ValueKey('bottom_nav_resources'),
            icon: Icon(AppIcons.resources),
            activeIcon: Icon(AppIcons.resources),
            label: 'Resources',
          ),
          AdaptiveNavigationItem(
            key: ValueKey('bottom_nav_containers'),
...
