...
                      Tab(
                        icon: Icon(AppIcons.bolt),
                        text: 'Config',
                      ),
                      Tab(
                        icon: Icon(AppIcons.activity),
                        text: 'Stats',
                      ),
                      Tab(
                        icon: Icon(AppIcons.cpu),
                        text: 'System',
                      ),
                    ],
                  ),
                ),
              ),
            ),
...
